binrw/tests/ui/deref_now_offset_after_conflict.stderr
error: `deref_now` and `offset_after` are mutually exclusive
 --> $DIR/deref_now_offset_after_conflict.rs:6:10
  |
6 |     #[br(deref_now, offset_after(1))]
  |          ^^^^^^^^^^^^^^^^^^^^^^^
